Version 3.0.2
- Add: ToConstructor() can now accept results from methods as argument e.g. ToConstructor(_ => new Foo(this.GetBar())
- Add: WhenNoAncestorMatches, WhenAnyAncestorMatches and WhenNoAncestorNamed When overloads
- Add: WeakConstructorArgument and WeakPropertyValue that keep a weak reference to the value only so that Ninject has no reference on them when caching the created instance.
- Change: Added WhenAnyAncestorNamed and marked mispelled WhenAnyAnchestorNamed as obsolete 
- Change: Release method was moved from IKernel to the IResolutionRoot interface 
- Bugfix: Private properties of base class were not checked for existence of setter and Inject attribute
- Bugfix: When an object that is the scope of another object is released an Exception was thrown.

Version 3.0.1
- Add: The default scope can be changed in the NinjectSettings using 
- Change: Open generics can now be passed to WhenInjectedInto
- Bugfix: Fixed race condition in the GarbageCollectionCachePruner

Version 3.0.0 (final)
- Change: The constructor scorer ignores implicit bindings
- Change: The constructor scorer ignores self bindings

Version 3.0.0-rc3
---------------
- Added: Support for default parameters. If not explicit binding exists for a dependency but there is default value defined it is used instead.
- Added: Support to define the constructor and constructor arguments using ToConstructor "to" overload
- Added: WhenInjectedExactlyInto When overload: Matches only if the target is exactly the specified type. This was the behavior of WhenInjectedInto in Ninject 2.2.
- Added: WhenAnyAnchestorNamed. Matches if any of the anchestor bindings is named with the specified name.
- Added default binding for IResolutionRoot that returns the kernel.
- Added: Open generic bindings can be overriden by closed generics for specific types.
- Added: Support for extensions that they can define bindings that return the same instance for different interfaces (interface segregation principle).